--- a/themes/quark/templates/partials/footer.html.twig
+++ b/themes/quark/templates/partials/footer.html.twig
@@ -1,5 +1,5 @@
 <section id="footer" class="section bg-gray">
     <section class="container {{ grid_size }}">
-        <p><a href="http://getgrav.org">Grav</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+        <p><a href="https://alyvix.com/">Alyvix</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://www.wuerth-phoenix.com/">Wuerth Phoenix</a> and <a href="http://www.violetatom.com/">Violet Atom</a>.</p>
     </section>
 </section>
