--- a/themes/quark/templates/partials/base.html.twig
+++ b/themes/quark/templates/partials/base.html.twig
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% include 'partials/metadata.html.twig' %}
 
-    <link rel="icon" type="image/png" href="{{ url('theme://images/logo/alyvix_icon.png') }}" />
+    <link rel="icon" type="image/png" href="{{ url('theme://images/alyvix_icon.png') }}" />
     <link rel="canonical" href="{{ page.url(true, true) }}" />
 {% endblock head %}
 
