--- a/themes/quark/css/custom.css
+++ b/themes/quark/css/custom.css
@@ -1,5 +1,5 @@
-@media (min-width: 525px) {
-  .hidden-ss {
-    display: none !important;
+@media screen and (min-width: 525px) {
+  br.small_screen {
+    display: none;
   }
 }
