--- a/themes/quark/templates/partials/footer.html.twig
+++ b/themes/quark/templates/partials/footer.html.twig
@@ -1,5 +1,9 @@
 <section id="footer" class="section bg-gray">
     <section class="container {{ grid_size }}">
+        <p><a href="https://alyvix.com/learn/getting_started.html" class="btn btn-success btn-lg" target="_blank"><strong>Get Started</strong> with <strong>Alyvix</strong></a>
+            <a href="https://alyvix.com/feedback" class="btn btn-primary btn-lg" target="_blank"><strong>Send</strong> quick <strong>Feedback</strong></a></p>
+    </section>
+    <section class="container {{ grid_size }}">
         <p><a href="https://www.youtube.com/channel/UCsfsO764sZ55r556ATj3Owg"><i class="fa fa-youtube-play fa-3x"></i></a>
             <a href="https://twitter.com/alyvixinfo"><i class="fa fa-twitter fa-3x"></i></a>
             <a href="https://alyvix.slack.com"><i class="fa fa-slack fa-3x"></i></a>
