--- a/themes/quark/templates/partials/footer.html.twig
+++ b/themes/quark/templates/partials/footer.html.twig
@@ -1,6 +1,8 @@
 <section id="footer" class="section bg-gray">
     <section class="container {{ grid_size }}">
         <p><a href="https://alyvix.com/learn/getting_started.html" class="btn btn-success btn-lg" target="_blank"><strong>Get Started</strong> with <strong>Alyvix</strong></a>
+            <br class="small_screen">
+            <br class="small_screen">
             <a href="https://alyvix.com/feedback" class="btn btn-primary btn-lg" target="_blank"><strong>Send</strong> quick <strong>Feedback</strong></a></p>
     </section>
     <section class="container {{ grid_size }}">
