--- a/themes/quark/templates/partials/footer.html.twig
+++ b/themes/quark/templates/partials/footer.html.twig
@@ -3,7 +3,10 @@
         <p><a href="https://alyvix.com/learn/getting_started.html" class="btn btn-success btn-lg" target="_blank"><strong>Get Started</strong> with <strong>Alyvix</strong></a>
             <br class="small_screen">
             <br class="small_screen">
-            <a href="https://alyvix.com/feedback" class="btn btn-primary btn-lg" target="_blank"><strong>Send</strong> quick <strong>Feedback</strong></a></p>
+            <a href="https://alyvix.com/feedback" class="btn btn-primary btn-lg" target="_blank"><strong>Send</strong> quick <strong>Feedback</strong></a>
+        </p>
+        <p><a href='https://www.capterra.com/reviews/146702/Alyvix?utm_source=vendor&utm_medium=badge&utm_campaign=capterra_reviews_badge'>  <img border='0' src='https://assets.capterra.com/badge/8b613f216098296f7b09b1fed3d1e3b7.png?v=2103598&p=146702' /></a>
+        </p>
     </section>
     <section class="container {{ grid_size }}">
         <p><a href="https://www.youtube.com/channel/UCsfsO764sZ55r556ATj3Owg"><i class="fa fa-youtube-play fa-3x"></i></a>
