--- a/themes/quark/templates/partials/footer.html.twig
+++ b/themes/quark/templates/partials/footer.html.twig
@@ -5,15 +5,15 @@
             <br class="small_screen">
             <a href="https://alyvix.com/feedback" class="btn btn-primary btn-lg" target="_blank"><strong>Send</strong> quick <strong>Feedback</strong></a>
         </p>
-        <p><a href='https://www.capterra.com/reviews/146702/Alyvix?utm_source=vendor&utm_medium=badge&utm_campaign=capterra_reviews_badge'>  <img border='0' src='https://assets.capterra.com/badge/8b613f216098296f7b09b1fed3d1e3b7.png?v=2103598&p=146702' /></a>
+        <p><a href='https://www.capterra.com/reviews/146702/Alyvix?utm_source=vendor&utm_medium=badge&utm_campaign=capterra_reviews_badge' target="_blank">  <img border='0' src='https://assets.capterra.com/badge/8b613f216098296f7b09b1fed3d1e3b7.png?v=2103598&p=146702' /></a>
         </p>
     </section>
     <section class="container {{ grid_size }}">
-        <p><a href="https://www.youtube.com/channel/UCsfsO764sZ55r556ATj3Owg"><i class="fa fa-youtube-play fa-3x"></i></a>
-            <a href="https://twitter.com/alyvixinfo"><i class="fa fa-twitter fa-3x"></i></a>
-            <a href="https://alyvix.slack.com"><i class="fa fa-slack fa-3x"></i></a>
-            <a href="https://github.com/alyvix/alyvix"><i class="fa fa-github fa-3x"></i></a></p>
-        <p><a href="https://alyvix.com/">Alyvix</a> is <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://www.wuerth-phoenix.com/">Würth Phoenix</a> and <a href="http://www.violetatom.com/">Violet Atom</a>.</p>
+        <p><a href="https://www.youtube.com/channel/UCsfsO764sZ55r556ATj3Owg" target="_blank"><i class="fa fa-youtube-play fa-3x"></i></a>
+            <a href="https://twitter.com/alyvixinfo" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+            <a href="https://alyvix.slack.com" target="_blank"><i class="fa fa-slack fa-3x"></i></a>
+            <a href="https://github.com/alyvix/alyvix" target="_blank"><i class="fa fa-github fa-3x"></i></a></p>
+        <p><a href="https://alyvix.com/">Alyvix</a> is <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://www.wuerth-phoenix.com/" target="_blank">Würth Phoenix</a> and <a href="http://www.violetatom.com/" target="_blank">Violet Atom</a>.</p>
         <p>Copyright © 2021 Würth Phoenix S.r.l. (P. IVA 01054690217) All rights reserved.</p>
         <p><a href="https://www.iubenda.com/privacy-policy/76746718" class="iubenda-white iubenda-embed" title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script></p>
     </section>
